dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tasks__tests__context_resolver__same_peer_reuses_context.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: counter.add label=send.pending.enq value=1 op="queue.enqueue" op="counter.add"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: gauge.add label=send.pending.depth delta=1 value=1 op="queue.enqueue" op="gauge.add"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: queue.enqueue count=1 depth=1 op="queue.enqueue"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: summary.record_value label=send.pending.depth_dist value=1 op="queue.enqueue" op="summary.record_value"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: counter.add label=send.pending.enq value=1 op="queue.enqueue" op="counter.add"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: gauge.add label=send.pending.depth delta=1 value=2 op="queue.enqueue" op="gauge.add"
0:00:00.000000000 TRACE metric_call: s2n_quic_dc::metric: queue.enqueue count=1 depth=2 op="queue.enqueue"
0:00:00.000000000 TRACE metric_call:metric_call: s2n_quic_dc::metric: summary.record_value label=send.pending.depth_dist value=2 op="queue.enqueue" op="summary.record_value"
